--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -19,6 +19,14 @@ body {
     padding: 0;
 }
 
+h4 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
+
 
 /**
    * Render the `main` element consistently in IE.
